fix footer overlap

--- a/public/css/transcription.css
+++ b/public/css/transcription.css
@@ -51,6 +51,10 @@ input[type="number"] {
   margin-bottom: 4rem;
 }
 
+#comments-view {
+  margin-bottom: 2rem;
+}
+
 tei-ref a, tei-ref a:hover {
   color: initial;
   text-decoration: none;
